--- a/Project/index.html
+++ b/Project/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link href="styles/style.css" rel="stylesheet" type="text/css" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixel Game</title>
+
+
 </head>
 <body>
-    <p>h</p>
+   
+    <h1>Pixel Games</h1>
+    <hr>
+
+    <p>Esto es un parrafo</p>
+
+
 </body>
 </html>
