--- a/Project/index.html
+++ b/Project/index.html
@@ -23,15 +23,12 @@
     </div>
         <hr>
         
-    <h3>esto es un texto mas grande</h3>
+    <h3>esto es un texto</h3>
     <hr>
 
     <div class="contenedor">
         <img src="Images/img_topCenter_Index.png"/>
             </div>
-    
-
-
 
 
 
