--- a/Project/index.html
+++ b/Project/index.html
@@ -20,12 +20,14 @@
                     <li><a href="#parati">Para Ti</a></li>
                     <li><a href="#categorias">Categorías</a></li>
                     <li><a href="#novedades">Novedades</a></li>
-                    <li><a href="#team">Team</a></li>
+                    <!-- Cambiar el href para que dirija a team.html -->
+                    <li><a href="team.html">Team</a></li>
                 </ul>
             </nav>
         </div>
-    </header>
 
+    </header>
+        
 
 <div class="video-container">
     <iframe width="560" height="315" src="https://www.youtube.com/embed/aRRyI5edRLM?autoplay=1&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
@@ -72,9 +74,11 @@
         <div class="container section">
             <h2>Team</h2>
             <p>Conoce al equipo detrás de PixelHub. ¡Somos apasionados por los videojuegos y estamos aquí para brindarte el mejor contenido posible!</p>
-            <!-- Contenido de Team -->
+            <!-- Enlace que lleva a team.html -->
+            <a href="team.html">Conoce al equipo</a>
         </div>
     </section>
+    
 
     <section class="vacio" id="vacio">
         <div class="vacio">
