--- a/Project/team.html
+++ b/Project/team.html
@@ -3,29 +3,53 @@
 
     <div class="team-members">
         <div class="team-member">
-            <img src="creator1.jpg" alt="Creator 1 Name" class="creator-image">
-            <div class="social-links">
-                <a href="https://www.facebook.com/creator1" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/creator1" target="_blank"><i class="fab fa-instagram"></i></a>
-                </div>
+            <img src="creator1.jpg" alt="JOEL PICHARDO" class="creator-image">
+           <ul>
+                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+               <ul> 
         </div>
 
+    <div class="team-members">
         <div class="team-member">
-            <img src="creator2.jpg" alt="Creator 2 Name" class="creator-image">
-            <div class="social-links">
-                </div>
+            <img src="creator1.jpg" alt="ENMANUEL POLANCO" class="creator-image">
+           <ul>
+                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+               <ul> 
         </div>
 
+    <div class="team-members">
         <div class="team-member">
-            <img src="creator3.jpg" alt="Creator 3 Name" class="creator-image">
-            <div class="social-links">
-                </div>
+            <img src="creator1.jpg" alt="ROENNY ALMONTE" class="creator-image">
+           <ul>
+                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+               <ul> 
         </div>
 
+    <div class="team-members">
         <div class="team-member">
-            <img src="creator4.jpg" alt="Creator 4 Name" class="creator-image">
-            <div class="social-links">
-                </div>
+            <img src="creator1.jpg" alt="RAFAEL FLORES" class="creator-image">
+           <ul>
+                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+               <ul> 
         </div>
-    </div>
-</section>
+
+    <div class="team-members">
+        <div class="team-member">
+            <img src="creator1.jpg" alt="ALCY OVALLES" class="creator-image">
+           <ul>
+                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+               <ul> 
+        </div>
+
+ 
+
