--- a/Project/team.html
+++ b/Project/team.html
@@ -25,8 +25,8 @@
         <div class="team-member">
             <img src="creator1.jpg" alt="ROENNY ALMONTE" class="creator-image">
            <ul>
-                <li class="facebook"><a href="https://www.facebook.com/profile.php?id=100009782406821">Facebook<i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-                <li class="instagram"><a href="https://www.instagram.com/roennyalmonte/"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com/profile.php?id=100009782406821" target="_blank">Facebook<i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="https://www.instagram.com/roennyalmonte/" target="_blank">Instagram<i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
                 <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
                <ul> 
         </div>
@@ -35,9 +35,9 @@
         <div class="team-member">
             <img src="creator1.jpg" alt="RAFAEL FLORES" class="creator-image">
            <ul>
-                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+                <li class="facebook"><a href="#" target="_blank">Facebook<i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#" target="_blank">Instagram<i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#" target="_blank">Youtube<i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
                <ul> 
         </div>
 
@@ -45,9 +45,9 @@
         <div class="team-member">
             <img src="creator1.jpg" alt="ALCY OVALLES" class="creator-image">
            <ul>
-                <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
-                <li class="instagram"><a href="#"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
-                <li  class="youtube"><a href="#"><i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
+                <li class="facebook"><a href="#" target="_blank">Facebook<i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
+                <li class="instagram"><a href="#" target="_blank">Instagram<i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></li>
+                <li  class="youtube"><a href="#" target="_blank">Youtube<i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
                <ul> 
         </div>
 
