--- a/Project/team.html
+++ b/Project/team.html
@@ -1,8 +1,18 @@
-<section class="team-section">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/teamstylos.css">
+    <title>Team de la pagina</title>
+</head>
+<body>
+    
+  <section class="team-section">
     <h2>Nuestro Equipo</h2>
 
     <div class="team-members">
-        <div class="team-member">
+        <div class="team-member1">
             <img src="creator1.jpg" alt="JOEL PICHARDO" class="creator-image">
            <ul>
                 <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
@@ -12,7 +22,7 @@
         </div>
 
     <div class="team-members">
-        <div class="team-member">
+        <div class="team-member2">
             <img src="creator1.jpg" alt="ENMANUEL POLANCO" class="creator-image">
            <ul>
                 <li class="facebook"><a href="#"><i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
@@ -22,7 +32,7 @@
         </div>
 
     <div class="team-members">
-        <div class="team-member">
+        <div class="team-member3">
             <img src="creator1.jpg" alt="ROENNY ALMONTE" class="creator-image">
            <ul>
                 <li class="facebook"><a href="https://www.facebook.com/profile.php?id=100009782406821" target="_blank">Facebook<i class="fa fa-facebook fa-2x" aria-hidden="true"></i></a></li>
@@ -31,7 +41,7 @@
                <ul> 
         </div>
 
-    <div class="team-members">
+    <div class="team-members4">
         <div class="team-member">
             <img src="creator1.jpg" alt="RAFAEL FLORES" class="creator-image">
            <ul>
@@ -41,7 +51,7 @@
                <ul> 
         </div>
 
-    <div class="team-members">
+    <div class="team-members5">
         <div class="team-member">
             <img src="creator1.jpg" alt="ALCY OVALLES" class="creator-image">
            <ul>
@@ -50,6 +60,7 @@
                 <li  class="youtube"><a href="#" target="_blank">Youtube<i class="fa  fa-youtube fa-2x"aria-hidden="true"></i></a></li>
                <ul> 
         </div>
-
+</body>
+</html>
  
 
