--- a/Project/team.html
+++ b/Project/team.html
@@ -1,3 +1,15 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title></title>
+</head>
+<body>
+    
+</body>
+</html>
+
 <section class="team-section">
     <h2>Nuestro Equipo</h2>
 
