--- a/Project/team.html
+++ b/Project/team.html
@@ -1,4 +1,14 @@
-<section class="team-section">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/teamstylos.css">
+    <title>Team de la pagina</title>
+</head>
+<body>
+    
+  <section class="team-section">
     <h2>Nuestro Equipo</h2>
 
     <div class="team-members">
