--- a/Project/index.html
+++ b/Project/index.html
@@ -30,7 +30,11 @@
         
 
 <div class="video-container">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aRRyI5edRLM?autoplay=1&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>        </div>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/aRRyI5edRLM?autoplay=1&amp;controls=0&amp;start=5" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>       
+
+
+
+</div>
 
 
 
@@ -45,7 +49,7 @@
             <a href="#parati" class="btn">Explorar Ahora</a>
         </div>
     </section>
-    
+
     <hr>
 
     <footer class="footer">
