--- a/Project/team.html
+++ b/Project/team.html
@@ -26,7 +26,35 @@
 
     </header>
    
-    
+    <section class = "team-section">
+        
+        <div class = "team-members">
+            <ul>
+
+                <h5>Joel Pichardo</h5>
+
+                <li><a>Hola estoy aqui</a></li>
+                <li><a>Hola estoy aqui</a></li>
+                <li><a>Hola estoy aqui</a></li>
+                <li><a>Hola estoy aqui</a></li>
+
+
+
+
+            </ul>
+
+
+
+
+
+        </div>
+
+
+
+
+
+
+    </section>
 
 
 
