--- a/Project/categories.html
+++ b/Project/categories.html
@@ -3,38 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/categories.css">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Categorias</title>
 </head>
 <body>
-    <div id="categories">
-        <!--header-->
-        <div id="header_categories" class="fixed-header" style="margin-top: 0px;"> 
-            <header id="header">
-                <div class="wrapper">
-                    <div id="style-logo">
-                        <a href="" title="MarketFruit">
-                            <img src="Images/pixelhub_logo.png" alt="pixelhub_logo">
-                        </a>
-                    </div>
-                    <div id="nav-links">
-                        <nav>
-                            <ul id="d-flex">
-                                <li id="header-links">
-                                    <a href="#">novedades</a>
-                                </li >
-                                <li id="header-links">
-                                    <a href="#">Categorias</a>
-                                </li>
-                                <li id="header-links">
-                                    <a href="#">sugerencias</a>
-                                </li>
-                            </ul>
-                        </nav>
-                    </div>
-                </div>           
-            </header>
-        </div> 
+    <header class="header">
+
+        <div class="container">
+            <h1>PixelHub - Tu Mundo Pixelado de Videojuegos</h1>
+            <p>Bienvenido a PixelHub, tu destino definitivo para todo lo relacionado con los videojuegos.</p>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="#inicio">Inicio</a></li>
+                    <li><a href="#parati">Para Ti</a></li>
+                    <li><a href="#categorias">Categorías</a></li>
+                    <li><a href="#novedades">Novedades</a></li>
+                    <!-- Cambiar el href para que dirija a team.html -->
+                    <li><a href="team.html">Team</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
         
         <!--portada-->
         <div>
@@ -77,7 +66,11 @@
 
     </div>
 
-
+    <footer class="footer">
+        <div class="container">
+            <p>© 2024 PixelHub. Todos los derechos reservados.</p>
+        </div>
+    </footer>
 </body>
 </html>
 
