all pages with href

--- a/Project/novedades.html
+++ b/Project/novedades.html
@@ -12,15 +12,16 @@
         <header class="header">
 
 
+
             <div class="container">
                 <h1>PixelHub - Tu Mundo Pixelado de Videojuegos</h1>
                 <p>Bienvenido a PixelHub, tu destino definitivo para todo lo relacionado con los videojuegos.</p>
                 <nav class="navbar">
                     <ul>
-                        <li><a href="#inicio">Inicio</a></li>
-                        <li><a href="#parati">Para Ti</a></li>
-                        <li><a href="#categorias">Categorías</a></li>
-                        <li><a href="#novedades">Novedades</a></li>
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="parati.html">Para Ti</a></li>
+                        <li><a href="categories.html">Categorías</a></li>
+                        <li><a href="novedades.html">Novedades</a></li>
                         <!-- Cambiar el href para que dirija a team.html -->
                         <li><a href="team.html">Team</a></li>
                     </ul>
