--- a/Project/parati.html
+++ b/Project/parati.html
@@ -9,20 +9,23 @@
 <body>
     <header class="header">
 
+
+
         <div class="container">
             <h1>PixelHub - Tu Mundo Pixelado de Videojuegos</h1>
             <p>Bienvenido a PixelHub, tu destino definitivo para todo lo relacionado con los videojuegos.</p>
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="#parati">Para Ti</a></li>
+                    <li><a href="parati.html">Para Ti</a></li>
                     <li><a href="categories.html">Categorías</a></li>
-                    <li><a href="#novedades">Novedades</a></li>
+                    <li><a href="novedades.html">Novedades</a></li>
                     <!-- Cambiar el href para que dirija a team.html -->
                     <li><a href="team.html">Team</a></li>
                 </ul>
             </nav>
         </div>
+
     </header>
 
 
