--- a/Project/index.html
+++ b/Project/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="parati.html">Para Ti</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="categories.html">Categorías</a></li>
                     <li><a href="novedades.html">Novedades</a></li>
                     <!-- Cambiar el href para que dirija a team.html -->
