--- a/Project/index.html
+++ b/Project/index.html
@@ -32,6 +32,7 @@
         <div class="container">
 
             <h2>Seleccion de la semana</h2>
+            <h2>Seleccion de la semana</h2>
 
 
             <div class="video-container">
