--- a/Project/index.html
+++ b/Project/index.html
@@ -33,6 +33,7 @@
 
             <h2>Seleccion de la semana</h2>
             <h2>Seleccion de la semana</h2>
+            <h2>Seleccion de la semana</h2>
 
 
             <div class="video-container">
