Revert "Merge branch 'main' of https://github.com/KeiferJoel/Pixel_Game_Web"
This reverts commit 2eec7b62b1126540259647ef0bc47bcc051887f6, reversing
changes made to 9bd0b83475f5e571a5b8ee14cc67f7cc136eaa5b.

--- a/Project/categories.html
+++ b/Project/categories.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="shortcut icon" href="Images/PIXEL-GAMING-..ico" type="image/x-icon">
     <title>Categorias</title>
 </head>
 <body>
@@ -18,7 +17,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="parati.html">Para Ti</a></li>
                     <li><a href="categories.html">Categorías</a></li>
                     <li><a href="novedades.html">Novedades</a></li>
                     <!-- Cambiar el href para que dirija a team.html -->
