--- a/Project/parati.html
+++ b/Project/parati.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelHub - Tu Mundo de Videojuegoss</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="Images/PIXEL-GAMING-..ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -18,7 +17,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="parati.html">Para Ti</a></li>
                     <li><a href="categories.html">Categorías</a></li>
                     <li><a href="novedades.html">Novedades</a></li>
                     <!-- Cambiar el href para que dirija a team.html -->
@@ -36,8 +35,8 @@
 
  <section class="para-ti" id="parati">
         <div class="container section">
-            <h2>Novedades de la semana</h2>
-            <p>Hay muchas novedades emocionantes en el mundo de los videojuegos. Desde lanzamientos de juegos altamente anticipados hasta innovaciones tecnológicas que están llevando la experiencia de juego a nuevos niveles, el panorama actual es realmente emocionante. Los desarrolladores están explorando nuevas formas de contar historias, ofrecer experiencias inmersivas y conectar a los jugadores de maneras nunca antes vistas. Además, la comunidad de jugadores está más activa que nunca, compartiendo sus experiencias, creaciones y opiniones en línea. Es un momento emocionante para ser un aficionado a los videojuegos.</p>
+            <h2>Para Ti</h2>
+            <p>¡Aquí es donde todo se trata de ti, jugador! Encuentra recomendaciones personalizadas, guías útiles y contenido exclusivo diseñado específicamente para mejorar tu experiencia de juego.</p>
             <!-- Contenido de Para Ti -->
         </div>
     </section>
