--- a/Project/team.html
+++ b/Project/team.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelHub - Tu Mundo de Videojuegoss</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="Images/PIXEL-GAMING-..ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
@@ -18,7 +17,7 @@
             <nav class="navbar">
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="parati.html">Para Ti</a></li>
                     <li><a href="categories.html">Categorías</a></li>
                     <li><a href="novedades.html">Novedades</a></li>
                     <!-- Cambiar el href para que dirija a team.html -->
@@ -29,7 +28,6 @@
 
     </header>
    
-<<<<<<< HEAD
     <section class = "team-section">
         
         <div class = "team-members">
@@ -63,8 +61,6 @@
     </section>
     
 
-=======
->>>>>>> 2cae253fb2f95420063474e4ca94bb1e3366beb0
 
 
     <footer class="footer">
