--- a/Project/team.html
+++ b/Project/team.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PixelHub - Tu Mundo de Videojuegoss</title>
     <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="Images/PIXEL-GAMING-..ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Images/PIXEL-GAMING.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
