team+cursor+her

--- a/Project/novedades.html
+++ b/Project/novedades.html
@@ -83,5 +83,10 @@
       
         </section>
         
+        <footer class="footer">
+            <div class="containerfooter">
+                <p>© 2024 PixelHub. Todos los derechos reservados.</p>
+            </div>
+        </footer>
     </body>
     </html>
