--- a/Project/team.html
+++ b/Project/team.html
@@ -29,7 +29,168 @@
 
     </header>
    
+ <section class="heroh2">
+      <div class="container">
 
+          <h2>Nuestro Equipo</h2>
+
+      </div>
+  </section>
+
+
+
+    <div class="wrapper">
+      <div class="card">
+        <div class="poster"><img src="Images/Team/Keifer Joel.jpg" alt="Keifer Joel"></div>
+        <div class="details">
+          <h1>Keifer Joel</h1>
+          <h2>Front-End • Dev • Back-End</h2>
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <span>Encargado del Front-End</span>
+          </div>
+          <div class="tags">
+            <span class="tag">Figma</span>
+            <span class="tag">CSS</span>
+            <span class="tag">BoosTrap</span>
+          </div>
+          <p class="desc">
+            Joel Pichardo es un desarrollador front end apasionado por la programación, destacado por crear interfaces de usuario atractivas y funcionales con HTML, CSS y JavaScript.
+          </p>
+          <div class="cast">
+            <h3>Redes</h3>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138134.png" alt="Youtube" title="Youtube"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="poster"><img src="https://images.pexels.com/photos/5380610/pexels-photo-5380610.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Rafael Flores"></div>
+        <div class="details">
+          <h1>Rafael Flores</h1>
+          <h2>Back-End • Style • Assist</h2>
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <span>Encargado del Desarrollo</span>
+          </div>
+          <div class="tags">
+            <span class="tag">JavaScript</span>
+            <span class="tag">HTML</span>
+            <span class="tag">CSS</span>
+          </div>
+          <p class="desc">
+            Rafael Flores es un desarrollador orientado al back end, con un ferviente interés por la lógica detrás de las aplicaciones. 
+          </p>
+          <div class="cast">
+            <h3>Redes</h3>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+        <div class="card">
+        <div class="poster"><img src="https://images.pexels.com/photos/5380614/pexels-photo-5380614.jpeg?auto=compress&cs=tinysrgb&w=400" alt="Roenny"></div>
+        <div class="details">
+          <h1>Roenny </h1>
+          <h2>Back-End • API • DEV</h2>
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <span>Encargado del Back-End</span>
+          </div>
+          <div class="tags">
+            <span class="tag">JavaScript</span>
+            <span class="tag">Node.JS</span>
+            <span class="tag">Phyton</span>
+          </div>
+          <p class="desc">
+            Roenny es un apasionado del backend, dedicado a construir las bases sólidas que sustentan las aplicaciones. 
+          </p>
+          <div class="cast">
+            <h3>Redes</h3>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+          </div>
+        </div>
+      </div>
+        <div class="card">
+        <div class="poster"><img src="Images/Team/enmanuel polanco.jpg" alt="Enmanuel Polanco"></div>
+        <div class="details">
+          <h1>Enmanuel Polanco </h1>
+          <h2>Front-End • Support • Spline</h2>
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="far fa-star"></i>
+            <span>Desarrollo De Diseño y Estilo</span>
+          </div>
+          <div class="tags">
+            <span class="tag">HTML</span>
+            <span class="tag">CSS</span>
+            <span class="tag">SCSS</span>
+          </div>
+          <p class="desc">
+            Enmanuel Polanco es un desarrollador de estilo versátil, capaz de adaptarse a diferentes áreas del desarrollo de software.
+          </p>
+          <div class="cast">
+            <h3>Redes</h3>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="card">
+        <div class="poster"><img src="Images/Team/Alcy ovalle.jpg" alt="Alcy Ovalle"></div>
+        <div class="details">
+          <h1>Alcy Ovalle</h1>
+          <h2>Back-End • API • DEV</h2>
+          <div class="rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+            <span>Desarrollador de Funciones</span>
+          </div>
+          <div class="tags">
+            <span class="tag yellow">JavaScript</span>
+            <span class="tag">Node.JS</span>
+            <span class="tag blue">BoosTrap</span>
+          </div>
+          <p class="desc">
+            Alcy Ovalle es un talentoso desarrollador especializado en la creación de funciones dinámicas para páginas web.
+          </p>
+          <div class="cast">
+            <h3>Redes</h3>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <footer class="footer">
         <div class="container">
