--- a/Project/team.html
+++ b/Project/team.html
@@ -124,10 +124,16 @@
           </p>
           <div class="cast">
             <h3>Redes</h3>
-            <ul>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
-          </div>
+            <li>
+              <a href="https://www.linkedin.com/in/tu-perfil-linkedin" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn">
+              </a>
+            </li>
+            <li>
+              <a href="https://www.instagram.com/roennyalmonte?utm_source=qr&igshid=MWZ2ZWRnOXAzY2JwbQ==" target="_blank">
+                <img src="https://cdn-icons-png.flaticon.com/128/2111/2111463.png" alt="Instagram" title="Instagram">
+              </a>
+            </li>
         </div>
       </div>
         <div class="card">
@@ -154,8 +160,8 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+              <li><img src="https://www.linkedin.com/in/enmanuel-polanco-9727992a6/" alt="linkedin" title="LinkedIn"></li>
+              <li><img src="https://www.instagram.com/enmanuel_p_05/" alt=instagram title="Instagram"></li>
             </ul>
           </div>
         </div>
