--- a/Project/team.html
+++ b/Project/team.html
@@ -64,9 +64,22 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138134.png" alt="Youtube" title="Youtube"></li>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+              <!--LinkedIn-->
+              <a href="https://www.linkedin.com/in/joel-alberto/" target="_blank">
+                <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              </a>
+
+
+              <!--Youtube-->
+              <a href="https://www.youtube.com/channel/UCeAIx0CZb33MyhDJ66xsAEw" target="_blank">
+                <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138134.png" alt="Youtube" title="Youtube"></li>
+              </a>
+
+              <!--Instagram-->
+              <a href="https://www.instagram.com/keifer.joel/" target="_blank"> 
+                <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+              </a>
+
             </ul>
           </div>
         </div>
