--- a/Project/team.html
+++ b/Project/team.html
@@ -124,9 +124,10 @@
           </p>
           <div class="cast">
             <h3>Redes</h3>
-            <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
-              <li><img src="https://www.instagram.com/roennyalmonte?utm_source=qr&igsh=MWZ2ZWRnOXAzY2JwbQ==" alt="Instagram" title="Instagram"></li>
-        </div>
+            <ul>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+          </div>
       </div>
         <div class="card">
         <div class="poster"><img src="Images/Team/enmanuel polanco.jpg" alt="Enmanuel Polanco"></div>
