Co-authored-by: Roenny925 <Roenny925@users.noreply.github.com> changes css and more

--- a/Project/team.html
+++ b/Project/team.html
@@ -6,6 +6,9 @@
     <title>PixelHub - Tu Mundo de Videojuegoss</title>
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="Images/PIXEL-GAMING.ico" type="image/x-icon">
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Danfo&display=swap');
+      </style>
 </head>
 <body>
     <header class="header">
@@ -13,7 +16,10 @@
 
 
         <div class="container">
-            <h1>PixelHub - Tu Mundo Pixelado de Videojuegos</h1>
+          <h1>
+            <span class="pixel-gaming">PixelGaming</span> - 
+            <span class="mundo-pixelado">Tu Mundo Pixelado de Videojuegos</span>
+        </h1>
             <p>Bienvenido a PixelHub, tu destino definitivo para todo lo relacionado con los videojuegos.</p>
             <nav class="navbar">
                 <ul>
