--- a/Project/novedades.html
+++ b/Project/novedades.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/style.css">
     <link rel="shortcut icon" href="Images/PIXEL-GAMING.ico" type="image/x-icon">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Danfo&display=swap');
+        </style>
 
 </head>
 
@@ -15,7 +18,10 @@
 
 
             <div class="container">
-                <h1>PixelHub - Tu Mundo Pixelado de Videojuegos</h1>
+                <h1>
+                    <span class="pixel-gaming">PixelGaming</span> - 
+                    <span class="mundo-pixelado">Tu Mundo Pixelado de Videojuegos</span>
+                </h1>
                 <p>Bienvenido a PixelHub, tu destino definitivo para todo lo relacionado con los videojuegos.</p>
                 <nav class="navbar">
                     <ul>
