--- a/Project/team.html
+++ b/Project/team.html
@@ -108,7 +108,9 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
+              <a href="https://www.instagram.com/keifer.joel/" target="_blank"> 
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+            </a>
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
             </ul>
           </div>
@@ -138,9 +140,14 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
+              <a href=" " target="_black"
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
-              <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
-          </div>
+            </a>
+              <a href="https://www.instagram.com/roennyalmonte?utm_source=qr&igsh=MWZ2ZWRnOXAzY2JwbQ=="target="_black">
+                
+                <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+              </a>
+            </div>
         </div>
       </div>
         <div class="card">
@@ -167,8 +174,12 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
+              <a herf="https://www.linkedin.com/in/enmanuel-polanco-9727992a6/" target="_black"
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
+            </a>
+            <a href="https://www.instagram.com/enmanuel_p_05/" target="_black"
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
+          </a>
             </ul>
           </div>
         </div>
