Co-authored-by: Roenny925 <Roenny925@users.noreply.github.com>

--- a/Project/team.html
+++ b/Project/team.html
@@ -160,7 +160,7 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
-              <a href=" " target="_black"
+              <a href=" " target="_black">
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
             </a>
               <a href="https://www.instagram.com/roennyalmonte?utm_source=qr&igsh=MWZ2ZWRnOXAzY2JwbQ=="target="_black">
@@ -194,10 +194,10 @@
           <div class="cast">
             <h3>Redes</h3>
             <ul>
-              <a herf="https://www.linkedin.com/in/enmanuel-polanco-9727992a6/" target="_black"
+              <a herf="https://www.linkedin.com/in/enmanuel-polanco-9727992a6/" target="_black">
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138130.png" alt="LinkedIn" title="LinkedIn"></li>
             </a>
-            <a href="https://www.instagram.com/enmanuel_p_05/" target="_black"
+            <a href="https://www.instagram.com/enmanuel_p_05/" target="_black">
               <li><img src="https://cdn-icons-png.flaticon.com/128/4138/4138124.png" alt="Instagram" title="Instagram"></li>
           </a>
             </ul>
