--- a/Project/blog.html
+++ b/Project/blog.html
@@ -50,74 +50,33 @@
     </header>
 
 
+<section class="hero">
+
+    <div class="container">
+        
+        <h2>Bienvenido a comunidad</h2>
+        <p>La seccion donde nuestro equipo compartira y recopilara los temas mas importantes</p>
+
+    </div>
 
 
 
+    
 
- <section class="para-ti" id="parati">
-        <div class="container section">
+</section>
+
+
+
+ <section class="hero_section" >
+        <div class="container">
             <h2>Novedades de la semana</h2>
-            <p>Hay muchas novedades emocionantes en el mundo de los videojuegos. Desde lanzamientos de juegos altamente anticipados hasta innovaciones tecnológicas que están llevando la experiencia de juego a nuevos niveles, el panorama actual es realmente emocionante. Los desarrolladores están explorando nuevas formas de contar historias, ofrecer experiencias inmersivas y conectar a los jugadores de maneras nunca antes vistas. Además, la comunidad de jugadores está más activa que nunca, compartiendo sus experiencias, creaciones y opiniones en línea. Es un momento emocionante para ser un aficionado a los videojuegos.</p>
-            <!-- Contenido de Para Ti -->
+            <h1>Aqui hablaremos de las ultimas novedades</h1>
+
+            <p>ultimamente nos hemos adentrado a las novedades del mundo de los videojuegos es por eso que tenemos esta seccion creada para hablar sobre temas importantes de la actualidad a nivel de videojuegos</p>
         </div>
     </section>
 
-    <section class="categorias" id="categorias">
-        <div class="container section">
-            <h2>Categorías</h2>
-            <p>Explora nuestro extenso catálogo de juegos organizados por género. Desde acción hasta simulación, tenemos algo para todos los gustos y estilos de juego.</p>
-            <!-- Contenido de Categorías -->
-        </div>
-    </section>
-
-    <section class="novedades" id="novedades">
-        <div class="container section">
-            <h2>Novedades</h2>
-            <p>Mantente al día con las últimas noticias, lanzamientos y actualizaciones en el mundo de los videojuegos. No te pierdas ni un solo detalle importante.</p>
-            <!-- Contenido de Novedades -->
-        </div>
-    </section>
-
-    <section class="team" id="team">
-        <div class="container section">
-            <h2>Team</h2>
-            <p>Conoce al equipo detrás de PixelHub. ¡Somos apasionados por los videojuegos y estamos aquí para brindarte el mejor contenido posible!</p>
-            <!-- Enlace que lleva a team.html -->
-            <a href="team.html">Conoce al equipo</a>
-        </div>
-    </section>
-    <section class="para-ti" id="parati">
-        <div class="container section">
-            <h2>Para Ti</h2>
-            <p>¡Aquí es donde todo se trata de ti, jugador! Encuentra recomendaciones personalizadas, guías útiles y contenido exclusivo diseñado específicamente para mejorar tu experiencia de juego.</p>
-            <!-- Contenido de Para Ti -->
-        </div>
-    </section>
-
-    <section class="categorias" id="categorias">
-        <div class="container section">
-            <h2>Categorías</h2>
-            <p>Explora nuestro extenso catálogo de juegos organizados por género. Desde acción hasta simulación, tenemos algo para todos los gustos y estilos de juego.</p>
-            <!-- Contenido de Categorías -->
-        </div>
-    </section>
-
-    <section class="novedades" id="novedades">
-        <div class="container section">
-            <h2>Novedades</h2>
-            <p>Mantente al día con las últimas noticias, lanzamientos y actualizaciones en el mundo de los videojuegos. No te pierdas ni un solo detalle importante.</p>
-            <!-- Contenido de Novedades -->
-        </div>
-    </section>
-
-    <section class="team" id="team">
-        <div class="container section">
-            <h2>Team</h2>
-            <p>Conoce al equipo detrás de PixelHub. ¡Somos apasionados por los videojuegos y estamos aquí para brindarte el mejor contenido posible!</p>
-            <!-- Enlace que lleva a team.html -->
-            <a href="team.html">Conoce al equipo</a>
-        </div>
-    </section>
+   
 
 
 
